Upadted Ui with photo

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
         rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Darshan Ahire</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
